--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "/Users/fernando/repos/460COMP/beatlaner-main/scenes/camera_2d.gd"
+  "godotTools.editorPath.godot4": "/Applications/Godot.app"
 }
